# ScuffedRedis

./: .dockerignore  .gitignore  CMakeLists.txt  DEPLOYMENT.md  Dockerfile  Dockerfile.cpp  Dockerfile.server  Dockerfile.web  ENHANCEMENT_COMPLETION_REPORT.md  FEATURES.md  HEATMAP_ENHANCEMENT_INDEX.md  Makefile  USAGE_GUIDE.md  WORKSHOP_IMPLEMENTATION_SUMMARY.md  WORKSHOP_INTEGRATION_SUMMARY.md  build.sh  changes_utf8.patch  deploy.sh  docker-compose.traefik.yml  docker-compose.yml  nginx.conf  package-lock.json  package.json  pnpm-workspace.yaml  readme.md  start.sh  update.md
.claude/: settings.local.json
docker/: Dockerfile.cpp  Dockerfile.server  Dockerfile.web  docker-compose.yml  env.production  nginx.conf
docs/: CODE_SNIPPETS.md  DEPLOYMENT.md  ENHANCEMENTS_README.md  ENHANCEMENT_CHECKLIST.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  VISUALIZATION_ENHANCEMENTS.md  WORKSHOP_CONTROL_PANEL.md  WORKSHOP_CONTROL_PANEL_REFERENCE.md  WORKSHOP_DOCS_INDEX.md  WORKSHOP_GUIDE.md  WORKSHOP_INTEGRATION_GUIDE.md  WORKSHOP_PANEL_ARCHITECTURE.md  WORKSHOP_QUICK_START.md  WORKSHOP_README.md  WORKSHOP_WALKTHROUGH.md
scripts/: build.bat  deploy.sh  stop.sh  workshop-start.sh
server/: env  env.example  package-lock.json  package.json  tsconfig.json
server/src/: cache.ts  index.ts  redis.ts  simple-redis.ts  traffic.ts
src/client/: main.cpp  redis_client.cpp  redis_client.hpp
src/data/: avl_tree.hpp  hashtable.cpp  hashtable.hpp  sorted_set.cpp  sorted_set.hpp  ttl_manager.cpp  ttl_manager.hpp
src/event/: event_loop.cpp  event_loop.hpp
src/network/: socket.cpp  socket.hpp  tcp_client.cpp  tcp_client.hpp  tcp_server.cpp  tcp_server.hpp
src/protocol/: protocol.cpp  protocol.hpp  request.cpp  request.hpp  request_handler.cpp  request_handler.hpp  response.cpp  response.hpp
src/server/: command_handler.cpp  command_handler.hpp  kv_store.cpp  kv_store.hpp  main.cpp  simple_main.cpp  simple_server.cpp
src/utils/: logger.cpp  logger.hpp
tests/: CMakeLists.txt  test-integration.js  test_basic.cpp
web/: env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
web/.next/: trace
web/.next/cache/webpack/client-development/: index.pack.gz.old
web/.next/cache/webpack/client-development-fallback/: index.pack.gz.old
web/.next/cache/webpack/server-development/: index.pack.gz.old
web/.next/server/: _error.js  server-reference-manifest.js  server-reference-manifest.json
web/.next/server/app/: _not-found_client-reference-manifest.js  not-found_client-reference-manifest.js
web/.next/server/pages/: _error.js
web/.next/server/vendor-chunks/: @swc.js  next.js
web/.next/static/chunks/: webpack.js
web/.next/static/chunks/app/: not-found.js
web/.next/static/chunks/fallback/: amp.js  webpack.js
web/app/: globals.css  layout.tsx  page.tsx
web/components/: CommandPlayground.tsx  EducationalPopups.tsx  Heatmap.tsx  Legend.tsx  Scene.tsx  TopBar.tsx  WorkshopControlPanel.tsx  WorkshopScenarios.tsx
web/components/ui/: badge.tsx  card.tsx
web/lib/: config.ts  socket.ts  state.ts  utils.ts
